# typing-checker-comparison

./: .python-version  pyproject.toml  readme.md
type-checker/: mypy.bash  pyre.bash  pyright.bash
typing/: example.py
